--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   },
 
   "scripts": {
-   "tw": "npx tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --watch"
+   "tw": "npx tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --watch",
+   "build": "npx tailwindcss -i ./src/css/input.css -o ./dist/css/style.css"
  }
 
 }
